# HP-Manager

./: HP MANAGER.EXE.lnk  README.md  launcher.py  pyproject.toml
Back/: app.py  config.py
Back/Models/: creature.py
Back/Repository/: creature_repository.py
Back/Routes/: creature_routes.py
Back/Service/: creature_service.py
Front/: main.py
instance/: notes.db
